--- a/templates/help.html
+++ b/templates/help.html
@@ -23,12 +23,14 @@
                                                                                                href="#torom"
                                                                                                aria-controls="torom"
                                                                                                role="tab"
-                                                                                               data-toggle="tab">进入教室</a>
+                                                                                               data-toggle="tab"
+                                                                                               onclick="alert('该功能正在开发中，敬请期待！！！')">进入教室</a>
                     </li>
                     <li class="li_notice" role="presentation" style="list-style-type: none"><a class="clic" href="#Plug"
                                                                                                aria-controls="Plug"
                                                                                                role="tab"
-                                                                                               data-toggle="tab">安装插件</a>
+                                                                                               data-toggle="tab"
+                                                                                               onclick="alert('该功能正在开发中，敬请期待！！！')">安装插件</a>
                     </li>
                 </ul>
             </div>
@@ -46,252 +48,14 @@
                         <ul class="sc">
                             <li style="list-style-type: none;margin-bottom:20px">
                                 <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
+                                    <div class="time">2018-09-06 星期四</div>
                                     <div class="ico"><i class="fa fa-lg fa-hand-o-right"
                                                         style="color: #2aabd2"
                                                         aria-hidden="true"></i></div>
                                 </div>
                                 <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
-                                    <li>3.系统提示预约成功</li>
-                                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
-                                </ul>
-                            </li>
-                            <li style="list-style-type: none;margin-bottom:20px">
-                                <div class="main">
-                                    <div class="time">2018-09-6 星期四</div>
-                                    <div class="ico"><i class="fa fa-lg fa-hand-o-right"
-                                                        style="color: #2aabd2"
-                                                        aria-hidden="true"></i></div>
-                                </div>
-                                <ul class="hidden li_c" style="color: #2aabd2">
-                                    <li>1.傲梦官网进行注册登录</li>
-                                    <li>2.傲梦官网页面->点击立即预约按钮</li>
+                                    <li>1.酷丁官网进行注册登录</li>
+                                    <li>2.酷丁官网页面->点击立即预约按钮</li>
                                     <li>3.系统提示预约成功</li>
                                     <li>4.课程顾问会及时与您沟通并安排试听课程</li>
                                 </ul>
@@ -346,11 +110,15 @@
                 <ul style="padding-left: 0">
                     <li class="li_notice active" style="list-style-type: none"><a class="clic" href="#">常见问题</a>
                     </li>
+                    <li>1.酷丁官网进行注册登录</li>
+                    <li>2.酷丁官网页面->点击立即预约按钮</li>
+                    <li>3.系统提示预约成功</li>
+                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
                 </ul>
             </div>
             {#            “联系我们（可添加二维码或其他  暂空）”#}
             <div id="con"
-                 style="width: 200px;text-align: center;right: -200px;position: fixed;z-index: 9999;top: 28%;background-color: #e3f4fb;border-radius: 10px;">
+                 style="width: 200px;text-align: center;right: -200px;position: fixed;z-index: 9999;top: 28%;background-color: #e3f4fb;border-radius: 10px; display: none">
                 <span class="spn">联系我们</span>
                 <p style="padding-top: 15px;font-size: 15px;color: #2aabd2">联系我们</p>
                 <div style="height: 200px;width: 200px;background: #c8e5bc;border-radius: 10px;">
@@ -362,6 +130,10 @@
                 <ul style="padding-left: 0">
                     <li class="li_notice active" style="list-style-type: none"><a class="clic" href="#">常见问题</a>
                     </li>
+                    <li>1.酷丁官网进行注册登录</li>
+                    <li>2.酷丁官网页面->点击立即预约按钮</li>
+                    <li>3.系统提示预约成功</li>
+                    <li>4.课程顾问会及时与您沟通并安排试听课程</li>
                 </ul>
             </div>
         </div>
