--- a/templates/tool.html
+++ b/templates/tool.html
@@ -15,14 +15,14 @@
     <div style="text-align: center">
         <div class="tool_div">
             <div>
-                java
+                <a href="" onclick="alert('该功能正在开发中，敬请期待！！！')">java</a>
             </div>
             <div>
-                python
+                <a href="" onclick="alert('该功能正在开发中，敬请期待！！！')">python</a>
             </div>
              <div>
-                 {#                 <a href="/static/build/index.html#/project_create">Scratch</a>#}
-                 <a href="/build/">Scratch</a>
+                 <a href="/static/build/index.html#/project_create">Scratch</a>
+                 {#                 <a href="/build/">Scratch</a>#}
             </div>
         </div>
     </div>
