--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -48,9 +48,6 @@
     <!-- Modernizr JS -->
     <script src="/static/js/modernizr-2.6.2.min.js"></script>
     <script src="/static/js/respond.min.js"></script>
-    <script>
-
-    </script>
 </head>
 <body>
 <!--这里是模态框的内容-->
@@ -100,25 +97,33 @@
             <div class="info">{% csrf_token %}</div>
 
             <div>
-                {#                    <label for="{{ reg.name.id_for_label }}">{{ reg.name.label }}</label>#}
+                <label for="{{ reg.name.id_for_label }}">{{ reg.name.label }}</label>
                 <i class="fa fa-user" aria-hidden="true"></i>
                 {{ reg.name }} <span>{{ reg.name.errors.0 }}</span><br>
             </div>
             <div>
-                {#                    <label for="{{ reg.password.id_for_label }}">{{ reg.password.label }}</label>#}
+                <label for="{{ reg.password.id_for_label }}">{{ reg.password.label }}</label>
                 <i class="fa fa-key" aria-hidden="true"></i>
                 {{ reg.password }} <span>{{ reg.password.errors.0 }}</span><br>
             </div>
             <div>
-                {#                    <label for="{{ reg.re_password.id_for_label }}">{{ reg.re_password.label }}</label>#}
+                <label for="{{ reg.re_password.id_for_label }}">{{ reg.re_password.label }}</label>
                 <i class="fa fa-key" aria-hidden="true"></i>
                 {{ reg.re_password }} <span>{{ reg.re_password.errors.0 }}</span><br>
             </div>
             <div>
-                {#                    <label for="{{ reg.account.id_for_label }}">{{ reg.account.label }}</label>#}
+                <label>头像</label>
+                <label for="id_avatar"><img style="margin-left: -51px;width: 100px;height: 100px;" id="avatar-img"
+                                            src="/static/img/deflaut.png" alt=""></label>
+                <input accept="image/*" type="file" name="avatar" id="id_avatar" style="display: none">
+                <span></span>
+            </div>
+            <div class="s_reg_account">
+                <label for="{{ reg.account.id_for_label }}">{{ reg.account.label }}</label>
                 <i class="fa fa-mobile" aria-hidden="true"></i>
                 {{ reg.account }} <span>{{ reg.account.errors.0 }}</span><br>
             </div>
+            <label for="message-check">验证码：</label>
             <input type="text" placeholder="验证码" class="message-check">
             <button type="button" class="getmessage">获取验证码</button>
             <br>
@@ -197,8 +202,10 @@
                             </li>
                             <li {% if request.path == "/contact/" %}class="active"{% endif %}><a
                                     href="/contact/">联系我们</a></li>
+                            {#                            <li {% if request.path == "/static/build/index.html" %}class="active"{% endif %}><a#}
+                            {#                                    href="/static/build/index.html">Scrach</a></li>#}
                             <li {% if request.path == "#" %}class="active"{% endif %}><a
-                                    href="#">Scrach</a></li>
+                                    href="#">Scratch</a></li>
 
                             {% if account %}
                                 {% if role == "student" %}
@@ -210,8 +217,8 @@
                                 <a href="/home/"><span>个人中心</span></a>
                                 <a href="/logout/"><span>退出</span></a>
                             {% else %}
-                                <li class="btn-cta"><a href="#"><span>登陆</span></a></li>
-                                <li class="btn-cta"><a href="#"><span>注册</span></a></li>
+                                <li class="btn-cta btn_login"><a href="#"><span>登陆</span></a></li>
+                                <li class="btn-cta btn_register"><a href="#"><span>注册</span></a></li>
                             {% endif %}
                         </ul>
                     </div>
@@ -339,6 +346,32 @@
 <!-- Main -->
 <script src="/static/js/main.js"></script>
 <script>
+
+
+    // 找到头像的input标签绑定change事件
+    $("#id_avatar").change(function () {
+        // 1. 创建一个读取文件的对象
+        var fileReader = new FileReader();
+        // 取到当前选中的头像文件
+        // console.log(this.files[0]);
+        // 读取你选中的那个文件
+        fileReader.readAsDataURL(this.files[0]);  // 读取文件是需要时间的
+        fileReader.onload = function () {
+            // 2. 等上一步读完文件之后才 把图片加载到img标签中
+            $("#avatar-img").attr("src", fileReader.result);
+        };
+    });
+
+
+
+
+
+
+
+
+
+
+
     // 验证码倒计时
     var code;
     var t = 60;
@@ -547,6 +580,7 @@
         formData.append("password", $("#id_password").val());
         formData.append("re_password", $("#id_re_password").val());
         formData.append("account", $("#id_account").val());
+        formData.append("avatar", $("#id_avatar")[0].files[0]);
         formData.append("csrfmiddlewaretoken", $("[name='csrfmiddlewaretoken']").val());
         $.ajax({
             url: "/reg/",
@@ -567,6 +601,8 @@
                             $("#id_" + k).next("span").html("");
                         }, 3000);
                     })
+                } else {
+                    location.reload()
                 }
             }
         })
@@ -614,7 +650,15 @@
                 }
             }
         })
+    });
+
+
+    // 将所有的input框绑定获取焦点的事件，将所有的错误信息清空
+    $("form input").focus(function () {
+        $(this).next().html("");
     })
+
+
 </script>
 </body>
 </html>
